force-app/main/default/objects/Course__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <label>Course Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>