force-app/main/default/objects/Course__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Department_Courses</relationshipLabel>
    <relationshipName>Courses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>