force-app/main/default/objects/Course__c/fields/Max_Students__c.field-meta.xml
<CustomField>
    <fullName>Max_Students__c</fullName>
    <label>Max Students</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>