force-app/main/default/objects/Course__c/fields/Total_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Total_Assignments__c</fullName>
    <description>Count of Assignment records</description>
    <inlineHelpText>Count of Assignment records)</inlineHelpText>
    <label>Total Assignments</label>
    <summaryForeignKey>Assignment__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>