force-app/main/default/objects/Course__c/fields/Total_Points_Available__c.field-meta.xml
<CustomField>
    <fullName>Total_Points_Available__c</fullName>
    <description>Sum of Max Points from Assignments</description>
    <inlineHelpText>Sum of Max Points from Assignments</inlineHelpText>
    <label>Total Points Available</label>
    <summarizedField>Assignment__c.Max_Points__c</summarizedField>
    <summaryForeignKey>Assignment__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>